# agentic

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
app/: __init__.py  config.py  logging_config.py  mcp_server.py  runner.py  schemas.py
app/agent/: __init__.py  main.py  mcp_tools.py  skills.py  slack_templates.py
app/fetchers/: __init__.py  gh_cli.py  http_api.py
app/tools/: __init__.py  local_script.py  skill_script.py  slack_webhook.py
jobs/: daily_digest.yaml  github_daily_activity.yaml
skills/: daily_digest_task.md  default.md  digest.md
skills/daily_digest_task/: SKILL.md
skills/default/: SKILL.md
skills/digest/: SKILL.md
skills/github_daily_activity/: SKILL.md
skills/github_daily_activity/scripts/: fetch_activity.py
tests/: test_agent_data_preview.py  test_skill_script_runner.py  test_skills_and_notifications.py  test_slack_templates.py
